[package]
name = "vk_compute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
vulkanalia = { version = "=0.15.0", features = ["libloading", "window"] }
lazy_static = "1"
nalgebra-glm = "0.17"
anyhow = "1"
thiserror = "1"
log = "0.4"
pretty_env_logger = "0.4"
owo-colors = "3.4.0"
